feat: album view, queue update
